# wealthboard-hexagonal

./: .gitignore  logging.ini  pyproject.toml
architecture/: dir_tree.md
src/wealthboard/: main.py
src/wealthboard/adapters/driven/: yfinance_price_provider.py
src/wealthboard/adapters/driven/etf_adapters/: oracle_etf_history_repository.py  oracle_etf_repository.py  oracle_owned_etf_repository.py
src/wealthboard/adapters/driving/: main.py
src/wealthboard/app/: ETFService.py  OwnedETFService.py  main.py
src/wealthboard/app/dto/: owned_etf_dto.py
src/wealthboard/app/mapper/: owned_etf_mapper.py
src/wealthboard/app/service/: etf_service.py  owned_etf_service.py
src/wealthboard/app/use_cases/: add_owned_etf.py
src/wealthboard/architecture/: dir_tree.md  module_view.md
src/wealthboard/domain/: ETF.py  OwnedETF.py  owned_etf.py
src/wealthboard/domain/etf/: etf_history.py  owned_etf.py
src/wealthboard/driven/adapters/: OracleETFRepository.py  OracleOwnedETFRepository.py  oracle_etf_repository.py  oracle_owned_etf_repository.py  yfinance_price_provider.py
src/wealthboard/driven/db/: connection_provider.py
src/wealthboard/driven/ports/: ETFRepository.py  OwnedETFRepository.py  owned_etf_repository.py  price_provider.py
src/wealthboard/driving/: main.py
src/wealthboard/driving/adapters/: OracleETFByName.py  OracleETFService.py  yfinance_price_provider.py
src/wealthboard/driving/ports/: ETFByName.py  ETFService.py
src/wealthboard/etf/domain/: etf.py  etf_history.py  owned_etf.py
src/wealthboard/ui/web/: web_router.py
(+41 files in other folders)
